--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     <div id="center" style="object-position: center">
-      <script src="sketch.js"></script>
-      <script src="boid.js"></script>
+      <script src="../static/sketch.js"></script>
+      <script src="../static/boid.js"></script>
     </div>
   </body>
 </html>
